# pre

./: .dockerignore  .gitignore  .pylintrc  MANIFEST.in  Makefile  Pipfile  README.md  Readme.APPS.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: cosmwasm_ci.yml  cosmwasm_ci_pre.yml  cosmwasm_ci_streaming.yml  end_to_end_ci.yml  pr_checks.yml  production.yaml  secrets_check.yml  staging-ci_cd.yaml  staging.yaml  tests.yml
apps/: admin.py  conf.py  defaults.py  keys.py  metrics.py  owner.py  proxy.py  query.py  reader.py  testing.py  utils.py
contract/: Dockerfile  README.md  build_in_docker.sh  compile.sh
contract/proxy_reencryption/: Cargo.toml  README.md  rustfmt.toml
contract/proxy_reencryption/examples/: schema.rs
contract/proxy_reencryption/schema/: execute_msg.json  get_available_proxies_response.json  get_contract_state_response.json  get_data_i_d_response.json  get_delegation_state_repsonse.json  get_delegation_state_response.json  get_delegation_status_response.json  get_fragments_response.json  get_next_proxy_task_response.json  get_proxy_tasks_response.json  get_selected_proxies_for_delegation_response.json  get_threshold_response.json  instantiate_msg.json  query_msg.json
contract/proxy_reencryption/src/: common.rs  contract.rs  delegations.rs  lib.rs  msg.rs  proxies.rs  reencryption_permissions.rs  reencryption_requests.rs  state.rs  tests.rs  types.rs
contract/streaming/: Cargo.toml
contract/streaming/src/: contract.rs  lib.rs  msg.rs  state.rs  tests.rs  types.rs
contract/umbral_verification/: Cargo.toml
docker/: .env  Dockerfile  docker-compose.yml  fetchd.Dockerfile
k8s/: docker-compose.yml  img-push.sh
k8s/ipfs/: Chart.yaml  values-prod.yaml  values-staging.yaml
k8s/ipfs-img/: Dockerfile  run.sh  shutdown.sh  start_ipfs
k8s/ipfs/templates/: 00-certificate.yaml  01-gateway.yaml  02-virtualService.yaml  03-service.yaml  04-dnsEndpoint.yaml  05-statefulset.yaml  06-envoyfilter.yaml
k8s/pre-relayer/: Chart.yaml  values.yaml
k8s/pre-relayer-test/: Chart.yaml  values.yaml
k8s/pre-relayer-test/templates/: _helpers.tpl
k8s/pre-relayer-test/templates/admin/: 00-configmap.yaml  11-secret.yaml  12-pvc.yaml  20-job.yaml
k8s/pre-relayer-test/templates/proxy/: 21-deployment.yaml  31-service.yaml
k8s/pre-relayer/templates/: _helpers.tpl
k8s/pre-relayer/templates/admin/: 00-configmap.yaml  11-secret.yaml  12-pvc.yaml  20-job.yaml
k8s/pre-relayer/templates/fetchd/: 00-configmap.yaml  01-certificate.yaml  01-service.yaml  02-deployment.yaml  02-destinatiornrule.yaml  04-gateway.yaml  (+2 more)
pre/: common.py
pre/api/: admin.py  base_api.py  delegatee.py  delegator.py  proxy.py
pre/contract/: base_contract.py  cosmos_contracts.py  cw_proxy_reencryption.wasm
pre/crypto/: base_crypto.py  umbral_crypto.py
pre/ledger/: base_ledger.py
pre/ledger/cosmos/: crypto.py  ledger.py  ledger_config_presets.py
pre/storage/: base_storage.py  ipfs_storage.py
pre/tests/crypto/: test_umbral_crypto.py
pre/utils/: loggers.py
scripts/: cw_proxy_reencryption.wasm  example.py  generate_reencryption_examples.py  liveness.sh  run-fetch-node.sh  run_tests.sh  simulate_interactions.py
test_data/configs/: ipfs_config_dc.yaml  ipfs_config_gcloud.yaml  ledger_config_capricorn.yaml  ledger_config_dc.yaml  ledger_config_dorado.yaml  ledger_config_fetchhub.yaml  ledger_config_stargate.yaml
test_data/keys/: admin_ledger.key  owner_encryption.key  owner_ledger.key  proxy_1_encryption.key  proxy_1_ledger.key  proxy_2_encryption.key  proxy_2_ledger.key  proxy_3_encryption.key  proxy_3_ledger.key  reader_encryption.key  reader_ledger.key
tests/: conftest.py  constants.py  docker_image.py  test_api.py  test_apps.py  test_apps_global_config.py  test_pre_api_end2end.py  utils.py
tests/test_apps/: test_apps_end2end.py  test_apps_global_config.py
tests/test_pre/: test_api.py  test_common.py  test_contracts.py  test_ledger.py  test_storage.py  test_umbral_crypto.py  test_utils.py
web/: Makefile  README.md  docker-compose.yml  ledger_entrypoint.sh
web/backend/: .gitignore  Dockerfile  manage.py  requirements.txt  setup.cfg
web/backend/pre_backend/: asgi.py  settings.py  urls.py  wsgi.py
web/backend/pro_backend/: asgi.py  settings.py  urls.py  wsgi.py
web/frontend/: Dockerfile  package-lock.json  package.json
web/frontend/public/: index.html
web/frontend/src/: App.tsx  Router.tsx
web/nginx/: nginx.conf
(+64 files in other folders)
