[package]
name = "cw-proxy-reencryption"
description = "An implementation of the proxy reencryption contract"
version = "0.1.0"
authors = ["Fetch AI <developer@fetch.ai>"]
edition = "2018"
repository = "https://github.com/CosmWasm/cosmwasm-examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "0.14.0"
cosmwasm-storage = {version = "0.14.0", features = ["iterator"]}
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "0.14.0"