[package]
name = "cw-proxy-reencryption"
description = "An implementation of the proxy reencryption contract"
version = "0.1.0"
authors = ["Fetch AI <developer@fetch.ai>"]
edition = "2018"
repository = "https://github.com/CosmWasm/cosmwasm-examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5", features = ["iterator"]}
cosmwasm-storage = { version = "1.0.0-beta5", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "=1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

# FRAGMENT_VERIFICATION
# umbral-pre = { git = "https://github.com/MissingNO57/rust-umbral", package = "umbral-pre", branch = "capricorn_wasm", default-features = false }

base64 = { version = "0.13", default-features = false, features = ["alloc"] }

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0-beta5", default-features = false, features = ["iterator"]}
cosmwasm-schema = "1.0.0-beta5"
serde_json = "1"
