[package]
name = "cw-proxy-reencryption"
description = "An implementation of the proxy reencryption contract"
version = "0.1.0"
authors = ["Fetch AI <developer@fetch.ai>"]
edition = "2018"
repository = "https://github.com/fetchai/pre"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"

schemars = "0.8.1"
serde = { version = "=1.0.103", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = { version = "1.0.24" }

umbral-pre = { version = "0.5.2", default-features = false, features = []}

# won't compile if js feature is not selected
getrandom = { version = "0.2", default-features = false, features = ["js"] }

base64 = { version = "0.13", default-features = false, features = ["alloc"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta5"
serde_json = "1"
