[package]
name = "cw-streaming"
description = "An implementation of Open Colearn streaming contract"
version = "0.1.0"
authors = ["Fetch AI <developer@fetch.ai>"]
edition = "2018"
repository = "https://github.com/fetchai/pre"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
cw-storage-plus = "0.13.0"

schemars = "0.8.1"
serde = { version = "=1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta5"
serde_json = "1"
global_counter = "*"
fetchai_std =  "*"
